ajustes nos links

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="d-flex align-items-center flex-column mt-5">
         <img src="https://verzel.com.br/static/media/logo_verzel.0335b665.svg" class="logo-header" alt="Logo Verzel">
         <button onclick="sonic()" type="button" class="btn btn-info w-75 mt-3">Sonic</button>
-        <button onclick="crashTeamReacer()" type="button" class="btn btn-info w-75 mt-3">Street Fighter</button>
-        <button onclick="bomberMan()" type="button" class="btn btn-info w-75 mt-3">Crash Team Racing</button>
-        <button onclick="marioKart()" type="button" class="btn btn-info w-75 mt-3">Bomberman</button>
-        <button onclick="cadastrarEntrada()" type="button" class="btn btn-info w-75 mt-3">Mario Kart</button>
+        <button onclick="streetFighter()" type="button" class="btn btn-info w-75 mt-3">Street Fighter</button>
+        <button onclick="crashTeamRacing()" type="button" class="btn btn-info w-75 mt-3">Crash Team Racing</button>
+        <button onclick="bomberMan()" type="button" class="btn btn-info w-75 mt-3">Bomberman</button>
+        <button onclick="marioKart()" type="button" class="btn btn-info w-75 mt-3">Mario Kart</button>
         <button onclick="pacMan()" type="button" class="btn btn-info w-75 mt-3">Pacman</button>
         <button onclick="mortalKombat()" type="button" class="btn btn-info w-75 mt-3">Mortal Kombat</button>
         <button onclick="teken()" type="button" class="btn btn-info w-75 mt-3">Tekken 3</button>
