--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button onclick="marioKart()" type="button" class="btn btn-info w-75 mt-3">Mario Kart</button>
         <button onclick="pacMan()" type="button" class="btn btn-info w-75 mt-3">Pacman</button>
         <button onclick="mortalKombat()" type="button" class="btn btn-info w-75 mt-3">Mortal Kombat</button>
-        <button onclick="teken()" type="button" class="btn btn-info w-75 mt-3">Tekken 3</button>
+        <button onclick="tekken()" type="button" class="btn btn-info w-75 mt-3">Tekken 3</button>
         <button onclick="topGear()" type="button" class="btn btn-info w-75 mt-3">Top Gear</button>
         <button onclick="alexKidd()" type="button" class="btn btn-info w-75 mt-3">Alex Kidd</button>
         <button onclick="sinuca()" type="button" class="btn btn-info w-75 mt-3">Sinuca</button>
