--- a/pacman.html
+++ b/pacman.html
@@ -12,14 +12,14 @@
         crossorigin="anonymous"></script>
     <script src="./index.js"></script>
     <link rel="stylesheet" href="./index.css">
-    <title>Top Gear</title>
+    <title>Pacman</title>
 </head>
 
 <body class="escuro">
     <div class="escuro d-flex flex-column align-items-center justify-content-center mt-5 pt-5">
         <div class="d-flex align-items-center justify-content-between w-25">
             <a href="index.html" class="pr-3 link">Voltar</a>
-            <h1 class="title">Top Gear</h1>
+            <h1 class="title">Pacman</h1>
             <h1 class="title"></h1>
         </div>
         <iframe src="https://www.retrogames.cc/embed/9247-ms-pacman-bootleg.html" width="600" height="450"
