--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <button onclick="alexKidd()" type="button" class="btn btn-info w-75 mt-3">Alex Kidd</button>
         <button onclick="sinuca()" type="button" class="btn btn-info w-75 mt-3">Sinuca</button>
         <button onclick="marvelVsCampcom()" type="button" class="btn btn-info w-75 mt-3">Marvel VS Capcom</button>
+
+        <a href="https://github.com/KaiqueJesus11/gameVerzel" target="_blank" class="mt-3 mb-3">Adicione novos jogos</a>
     </div>
 </body>
 
